# kovi-plugin-xiaoshi

./: Cargo.toml  LICENSE
src/: lib.rs
src/chatbot/: chat.rs  config.rs  llm.rs  mcp.rs  memory.rs  memory_evaluation.rs  mod.rs  prompt_template.rs  rag.rs  rag_database.rs
